--- a/blogspot.html
+++ b/blogspot.html
@@ -11,11 +11,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
-<<<<<<< HEAD
-                Hyperblog 
-=======
-                Hyperblog cabecera
->>>>>>> cabecera
+                Hyperblog cabeceras
                 <span id="tagline">Tu blog de cabecera</span>
             </div>
             <div id="post">
