--- a/blogspot.html
+++ b/blogspot.html
@@ -11,18 +11,15 @@
     <body>
         <div id="container">
             <div id="cabecera">
-<<<<<<< HEAD
-                Hyperblog 
-=======
-                Hyperblog cabecera
->>>>>>> cabecera
-                <span id="tagline">Tu blog de cabecera</span>
+                Hyperblog cabecera maestro
+                <span id="tagline">Tu blog maestro</span>
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
                 <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
                 <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
                 <p>Suscribete y dale like ¦</p>
+                <p>A generar nuevos ingresos</p>
             </div>
         </div>
     </body>
