--- a/blogspot.html
+++ b/blogspot.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+ni<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/estilos.css">
-    <title>Retomando el aprendizaje de diseño de sitios web</title>
+    <title>Bienvenido a Hiperblog</title>
 </head>
 <body>
     <body>
