Creamos el footer de la pagina

--- a/blogspot.html
+++ b/blogspot.html
@@ -21,6 +21,10 @@ ni<!DOCTYPE html>
                 <p>Suscribete y dale like ¦</p>
                 <p>A generar nuevos ingresos</p>
             </div>
+            <div id="footer">
+                Pie de pagina - MFDV
+            </div>
+
         </div>
     </body>
 </body>
