--- a/blogspot.html
+++ b/blogspot.html
@@ -1,11 +1,12 @@
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Bienvenido a Hyperblog 2.0</title>
-        <link rel="stylesheet" href="css/estilos.css" />
-    </head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/estilos.css">
+    <title>Bienvenido a Hiperblog 2.0</title>
+</head>
     <body>
         <div id="container">
             <div id="cabecera">
@@ -18,6 +19,9 @@
                 <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
                 <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
                 <p>Suscribete y dale like</p>
+            </div>
+            <div id="footer">
+                Pie de pagina - MFDV - 2022
             </div>
         </div>
     </body>
